fix(LOC-1905): correction to site info page so live link popups display properly (#120)
* fix(LOC-1905): live link popups should no longer be cut off at the edge of the site information area of a window.

* fix(LOC-1905): updated width property for site header to min-width to fight against growth outside the scope of the window.

--- a/src/styles/containers/SiteInfo.scss
+++ b/src/styles/containers/SiteInfo.scss
@@ -6,7 +6,7 @@
 		display: flex;
 		flex-direction: column;
 		position: relative;
-		overflow: hidden;
+		min-width: 0;
 	}
 
 	.DownloaderOverlay {
